--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript", "plugin:prettier/recommended"],
+  "extends": ["next/core-web-vitals", "next/typescript"],
   "plugins":["prettier"],
   "rules": {
     "prettier/prettier": "error"
