--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
+    "jest-fixed-jsdom": "^0.0.8",
     "lint-staged": "^15.2.10",
+    "msw": "^2.6.2",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5"
