--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
-      "test-utils":["./stc/utils/test-utils"]
+      "test-utils":["./src/utils/tests/test-utils"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
