--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint",
     "format": "prettier ./src -w",
     "prepare": "husky",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "vitest"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.59.20",
@@ -28,17 +27,18 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^9.1.6",
-    "jest": "^29.7.0",
-    "jest-fixed-jsdom": "^0.0.8",
     "lint-staged": "^15.2.10",
     "msw": "^2.6.2",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite-tsconfig-paths": "^5.1.0",
+    "vitest": "^2.1.4"
   },
   "lint-staged": {
     "*.{ts,tsx}": "eslint --fix"
