feat: infite scroll to paginate planets

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "@/*": ["./src/*"],
       "test-utils":["./src/utils/tests/test-utils"]
     },
-    "types":["vitest/globals"],
+    "types":["vitest/globals", "./types"],
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
