--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "eslint-plugin-prettier": "^5.2.1",
+    "happy-dom": "^15.11.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "msw": "^2.6.2",
